--- a/src/styles/_css-variables.scss
+++ b/src/styles/_css-variables.scss
@@ -34,7 +34,9 @@
 
   // Component dimensions
   --component-max-width: 800px;
+  --side-nav-width-switch-mobile: 500px;
   --side-nav-width-switch-l: 1500px;
+  --side-nav-width-mobile: calc(100vw - var(--s7));
   --side-nav-width: 200px;
   --side-nav-width-l: 400px;
   --bar-height-large: 56px;
